	the function of that name in the 'utils' name space.

    o	Plain text help is now used as the fallback for HTML help (as
	it always has been for Compiled HTML help on Windows).


COMPRESSION

    o	New function untar() to list or unpack tar archives, possibly
	compressed.  This uses either an external 'tar' command or an
	internal implementation.

    o	New functions memCompress() and memDecopmress() for in-memory
	compression and decompression.

    o	bzfile() has a 'compress' argument to select the amount of
	effort put into compression when writing.

    o	New function xzfile() for use with xz-compressed files, if
	suitable OS support is found at configuration.  (This can also
	read files compressed by some versions of 'lzma'.)  The new
	capabilities("xz") reports if it is supported.

    o	gzfile() looks at the file header and so can now also read
	bzip2-ed files and xv-comppressed files (where supported).

    o	There is the new option of save(compress = "bzip2") to use bzip2
	compression (which will be slower, but can give substantially
	smaller files).  load() can read such saves (but only as from
	this version of R).  Also "xz" where supported.

    o	R CMD INSTALL/check and tools::writePACKAGES accept a wider
	range of compressed tar archives.  Precisely how wide depends
	on the capabilities of the host system's 'tar' command: they
	almost always include .tar.bz2 archives, and with modern
	versions of 'tar' other forms of compression such as lzma and
	xz, and arbitrary extensions.

    o	R CMD INSTALL has a new option --data-compress to control the
	compression used when lazy-loading data.  One new option is
	--data-compress=bzip2 which will give ca 15% better
	compression at the expense of slower installation times.  Also
	--data-compress=xz where supported, often giving even better
	compression on large datasets at the expense of much slower
	installation times.


DEPRECATED & DEFUNCT

    o	Bundles of packages are deprecated.  See 'Writing R