@@ -24,7 +24,7 @@ export("?", CRAN.packages, Rprof,Rprofmem, RShowDoc, RSiteSearch,
        read.delim2, read.fwf, read.fortran, read.socket, read.table,
        recover, relist, remove.packages, savehistory, select.list,
        sessionInfo, setBreakpoint, setRepositories, stack, str,
-       strOptions, summaryRprof, tail, tail.matrix, timestamp,
+       strOptions, summaryRprof, tail, tail.matrix, tar, timestamp,
        toBibtex, toLatex, type.convert, unstack, untar, unzip,
        update.packageStatus, update.packages, upgrade, url.show, vi,
        vignette, write.csv, write.csv2, write.socket, write.table,
